export funktion erweitert